# Tauon

./: .gitignore  README.md  setup.py
Tauon/: pyproject.toml  requirements.txt  results_lambda_0.01.json  results_lambda_0.1.json
Tauon/benchmarks/cifar10/: __init__.py  data.py  model.py  train_softmuon.py
Tauon/docs/: EXPERIMENTS.md  USAGE.md
Tauon/experiments/configs/: ablations.yaml
Tauon/experiments/scripts/: analyze_results.py
Tauon/soft_muon/: __init__.py  adaptive_lambda.py  config.py  optimizer.py
Tauon/tests/benchmarks/: test_timing.py
Tauon/tests/integration/: test_cifar10_training.py
Tauon/tests/unit/: __init__.py
cifar10-airbench/: airbench94_softmuon.py
docs/: API.md
experiments/configs/: baselines.yaml  lambda_sweep.yaml  lr_lambda_grid.yaml
experiments/scripts/: run_sweep.py
soft_muon/: newton_schulz.py  spectral_utils.py
tests/: __init__.py
tests/integration/: __init__.py
tests/unit/: test_adaptive_lambda.py  test_newton_schulz.py  test_optimizer_step.py  test_spectral_filter.py
