[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "soft-muon"
version = "0.1.0"
description = "Soft Muon Optimizer - Regularized Polar Spectral Shaping"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Soft Muon Team"}
]
keywords = ["deep learning", "optimizer", "pytorch", "spectral shaping"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
]
benchmark = [
    "torchvision>=0.15.0",
    "pyyaml>=6.0",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
]
all = [
    "soft-muon[dev,benchmark]",
]

[project.urls]
Homepage = "https://github.com/soft-muon/soft-muon"
Documentation = "https://github.com/soft-muon/soft-muon#readme"

[tool.setuptools.packages.find]
where = ["."]
include = ["soft_muon*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310", "py311"]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
